--- a/server/djangoapp/templates/djangoapp/registration.html
+++ b/server/djangoapp/templates/djangoapp/registration.html
@@ -1,11 +1,66 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    {% load static %}
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-</head>
-    <body>
-    <!--Add a registration form here -->
-    </body>
-</html>
+{% extends "./base.html" %} 
+{% load addcss %}
+{% block content %}
+<div style="position: absolute; width: 30%; top: 50%; transform:translate(120%, -50%);">
+    <div class="w-100 text-center">
+        <h1>Registration Form</h1>
+    </div>
+
+    <form action="/djangoapp/register/" method="post">
+        {% csrf_token %}
+        <div class="form-row form-group mt">
+            <div class="col-md-4 col-form-label-lg text-left">
+                <label for="username">Username: </label>
+            </div>
+            <div class="col d-flex align-items-center" id="username">
+                {{ register_form.username|addcss:"form-control mr-sm-2"}}
+            </div>
+        </div>
+        <div class="form-row form-group mt">
+            <div class="col-md-4 col-form-label-lg text-left">
+                <label for="username">First Name: </label>
+            </div>
+            <div class="col d-flex align-items-center" id="username">
+                {{ register_form.first_name|addcss:"form-control mr-sm-2"}}
+            </div>
+        </div>
+        <div class="form-row form-group mt">
+            <div class="col-md-4 col-form-label-lg text-left">
+                <label for="username">Last Name: </label>
+            </div>
+            <div class="col d-flex align-items-center" id="username">
+                {{ register_form.last_name|addcss:"form-control mr-sm-2"}}
+            </div>
+        </div>
+        <div class="form-row form-group">
+            <div class="col-md-4 col-form-label-lg text-left">
+                <label for="password1">Password: </label>
+            </div>
+            <div class="col d-flex align-items-center" id="password1">
+                {{ register_form.password1|addcss:"form-control mr-sm-2"}}
+            </div>
+        </div>
+        <div class="form-row form-group">
+            <div class="col-md-4 col-form-label-lg text-left">
+                <label for="password2">Repeat Password: </label>
+            </div>
+            <div class="col d-flex align-items-center" id="password2">
+                {{ register_form.password2|addcss:"form-control mr-sm-2"}}
+            </div>
+        </div>
+        <div class="w-100 text-center">
+            <button type="submit" class="btn btn-primary w-75">Submit</button>
+        <div>
+            {% if register_form.errors %}
+                {% for field in register_form %}
+                    {% for error in field.errors %} 
+                        <div class="alert alert-danger mt-2">
+                            <strong>{{ error|escape }}</strong>
+                        </div>
+                    {% endfor %}
+                {% endfor %}
+            {% endif %}
+    </form>
+    
+</div>
+{% endblock content %}
