--- a/server/djangoapp/templates/djangoapp/base.html
+++ b/server/djangoapp/templates/djangoapp/base.html
@@ -16,9 +16,8 @@
 
     <body>
         <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
-            <a class="navbar-brand" href="#">Navbar</a>
-          
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <a class="navbar-brand" href="#">Dealership</a>
+            <div class="collapse navbar-collapse">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
                   <a class="nav-link" href="/djangoapp/">Home</a>
